<resources>
    <string name="app_name">Sequence Score Recorder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="school">School</string>
    <string name="students_database">Students database</string>
    <string name="score_sheets_manager">Score sheets manager</string>
    <string name="subjects_manager">Subjects manager</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="_class">Class</string>
    <string name="student">Student</string>
    <string name="cancel">Cancel</string>
    <string name="modify_data">Modify data</string>
    <string name="delete_data">Delete data</string>
    <string name="ok">OK</string>
    <string name="data_updated_successfully">Data updated successfully.</string>
    <string name="data_deleted_successfully">Data deleted successfully.</string>
    <string name="already_exists">already exists.</string>
    <string name="clear_current_list">Clear current list</string>
    <string name="_continue">Continue</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="clear_database">Clear database</string>
    <string name="message_to_clear_database">This action will permanently erase all students data in database</string>
    <string name="database_erased_successfully">Database was erased successfully</string>
    <string name="finish">Finish</string>
    <string name="select_student_gender">Select student gender</string>
    <string name="enter_student_name">Enter student Name</string>
    <string name="enter_student_id">Enter student id</string>
    <string name="validate">Validate</string>
    <string name="select_class">Select class</string>
    <string name="select_sequence">Select sequence</string>
    <string name="sequence">Sequence</string>
    <string name="fill_marks">Fill marks</string>
    <string name="select_academic_year">Select academic year</string>
    <string name="select_school">Select school</string>
    <string name="exit">Exit</string>
    <string name="refresh">Refresh</string>
    <string name="select_subject">Select subject</string>
    <string name="enter_score">Enter score</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="cn">CN</string>
    <string name="score">Score</string>
    <string name="update">Update</string>
    <string name="academic_year">Academic year</string>
    <string name="score_sheet">score sheet</string>
    <string name="offered">Offered</string>
    <string name="save">Save</string>
    <string name="sort_by">Sort by</string>
    <string name="number_of_students">Number of students</string>
    <string name="load">Load</string>
    <string name="_new">New</string>
    <string name="add_students">Add students</string>
    <string name="statistics">Statistics</string>

    <string-array name="sort_options">
        <item>ID</item>
        <item>Name</item>
    </string-array>

    <string-array name="schools">
        <item>GBHS Koutaba</item>
        <item>GBHS Foumbot</item>
    </string-array>

    <string-array name="academic_years">
        <item>2022–2023</item>
        <item>2023–2024</item>
        <item>2024–2025</item>
        <item>2025–2026</item>
    </string-array>

    <string-array name="gender">
        <item>M</item>
        <item>F</item>
    </string-array>

    <string-array name="form1_streams">
        <item>Form 1A</item>
        <item>Form 1B</item>
        <item>Form 1C</item>
        <item>Form 1D</item>
        <item>Form 1Bil</item>
    </string-array>
    <string-array name="form2_streams">
        <item>Form 2A</item>
        <item>Form 2B</item>
        <item>Form 2C</item>
        <item>Form 2D</item>
        <item>Form 2Bil</item>
    </string-array>
    <string-array name="form3_streams">
        <item>Form 3A</item>
        <item>Form 3B</item>
        <item>Form 3C</item>
        <item>Form 3D</item>
        <item>Form 3Bil</item>
    </string-array>
    <string-array name="form4_streams">
        <item>Form 4 Art</item>
        <item>Form 4 Science</item>
    </string-array>

    <string-array name="form5_streams">
        <item>Form 5 Art</item>
        <item>Form 5 Science</item>
    </string-array>

    <string-array name="lowersixth_science_streams">
        <item>Lower sixth S1</item>
        <item>Lower sixth S2</item>
        <item>Lower sixth S3</item>
        <item>Lower sixth S4</item>
    </string-array>
    <string-array name="lowersixth_art_streams">
        <item>Lower sixth A1</item>
        <item>Lower sixth A2</item>
        <item>Lower sixth A3</item>
        <item>Lower sixth A4</item>
    </string-array>
    <string-array name="uppersixth_science_streams">
        <item>Upper sixth S1</item>
        <item>Upper sixth S2</item>
        <item>Upper sixth S3</item>
        <item>Upper sixth S4</item>
    </string-array>
    <string-array name="uppersixth_art_streams">
        <item>Upper sixth A1</item>
        <item>Upper sixth A2</item>
        <item>Upper sixth A3</item>
        <item>Upper sixth A4</item>
    </string-array>
    <string-array name="classes">
        <item>Form 1A</item>
        <item>Form 1B</item>
        <item>Form 1Bil</item>
        <item>Form 4Arts</item>
        <item>Form 5sc</item>
        <item>Lower sixth S1</item>
        <item>Lower sixth S2</item>
        <item>Lower sixth S3</item>
        <item>Lower sixth S4</item>
        <item>Lower sixth A1</item>
        <item>Lower sixth A2</item>
        <item>Lower sixth A3</item>
        <item>Lower sixth A4</item>
        <item>Upper sixth S1</item>
        <item>Upper sixth S2</item>
        <item>Upper sixth S3</item>
        <item>Upper sixth S4</item>
        <item>Upper sixth A1</item>
        <item>Upper sixth A2</item>
        <item>Upper sixth A3</item>
        <item>Upper sixth A4</item>
    </string-array>

    <string-array name="subjects">
        <item>Biology</item>
        <item>Human Biology</item>
        <item>Chemistry</item>
    </string-array>

    <string-array name="sequences">
        <item>First sequence</item>
        <item>Second sequence</item>
        <item>Third sequence</item>
        <item>Fourth sequence</item>
        <item>Fifth sequence</item>
        <item>Sixth sequence</item>
    </string-array>
</resources>