<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SubjectManagerActivity"
    android:layout_marginTop="@dimen/margin_8"
    android:paddingLeft="@dimen/margin_14"
    android:paddingRight="@dimen/margin_14">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/classTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_class">
        <AutoCompleteTextView
            android:id="@+id/autoStudentClass"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/select_subject">
        <AutoCompleteTextView
            android:id="@+id/autoStudentSubject"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:gravity="end">
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/value_36"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/save"
            android:enabled="false"/>
        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/value_36"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/ok"
            android:enabled="false"
            android:layout_marginStart="@dimen/margin_8"/>

    </LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_2"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:layout_marginBottom="@dimen/margin_4">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="match_parent"
            android:text="@string/sn"
            android:layout_marginEnd="@dimen/margin_4"
            android:layout_marginBottom="@dimen/margin_14"
            android:gravity="bottom"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:layout_marginEnd="@dimen/margin_4"
            android:layout_marginBottom="@dimen/margin_14"
            android:gravity="bottom" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offered" />
            <CheckBox
                android:id="@+id/checkboxAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"/>
        </LinearLayout>
<!--        <TextView-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="0.2"-->
<!--            android:layout_height="match_parent"-->
<!--            android:text="@string/offered" />-->
    </LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_2"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSubjectCheckList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>